@@ -1,3 +1,8 @@
+2006-10-24  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* HttpUtil: initial implementation of proper caching based on
+	last-modified and etag HTTP headers
+
 2006-10-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* Salut plugin: handles (multilingual) salutations (hello/goodbye)
